# gntech

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
docker-scripts/: commands.sh
src/apps/weather/: admin.py  models.py  services.py  urls.py  views.py
src/apps/weather/migrations/: 0001_initial.py  0002_alter_weatherdata_options.py
src/apps/weather_api/: apps.py  models.py  serializer.py  tests.py  urls.py  views.py
src/project/: settings.py  urls.py
